// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly given a set of tiles 1`] = `
<div
  className="sc-bwzfXH jBBIHp"
>
  <div
    className="tiles"
  >
    <div
      className="sc-bdVaJa jodVcS tile-invisible"
      onClick={[Function]}
    >
      <span
        className="tile-number"
      >
        4
      </span>
    </div>
    <div
      className="sc-bdVaJa gaQDFA tile-invisible"
      onClick={[Function]}
    >
      <span
        className="tile-number"
      >
        2
      </span>
    </div>
    <div
      className="sc-bdVaJa htVqMf tile-invisible"
      onClick={[Function]}
    >
      <span
        className="tile-number"
      >
        3
      </span>
    </div>
    <div
      className="sc-bdVaJa dQlHZv tile-invisible"
      onClick={[Function]}
    >
      <span
        className="tile-number"
      >
        1
      </span>
    </div>
  </div>
</div>
`;

exports[`Grid renders correctly given an empty set of tiles 1`] = `
<div
  className="sc-bwzfXH iPaWuQ"
>
  <div
    className="tiles"
  />
</div>
`;

exports[`Grid renders correctly given one tile 1`] = `
<div
  className="sc-bwzfXH jBBIHp"
>
  <div
    className="tiles"
  >
    <div
      className="sc-bdVaJa eHNnrm tile-invisible"
      onClick={[Function]}
    >
      <span
        className="tile-number"
      >
        0
      </span>
    </div>
  </div>
</div>
`;
